--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,40 +1,48 @@
-/* Sidebar styles */
 .sidebar {
-    width: 250px;
-    background-color: #f8f9fa;
-    height: calc(100vh - 60px); /* Adjust based on the height of the navbar */
-    position: fixed;
-    top: 60px; /* Adjust based on the height of the navbar */
-    left: 0;
-    padding: 1rem;
-    box-shadow: 2px 0 5px rgba(0,0,0,0.1);
-    overflow-y: auto;
-    box-sizing: border-box;
+  width: 250px; /* Ajusta el ancho según sea necesario */
+  background-color: #f8f9fa;
+  height: calc(100vh - 60px); /* Ajusta según la altura del navbar */
+  position: fixed;
+  top: 60px; /* Ajusta según la altura del navbar */
+  left: 0;
+  padding: 1rem;
+  box-shadow: 2px 0 5px rgba(0,0,0,0.1);
+  overflow-y: auto;
+  box-sizing: border-box;
+}
+
+.sidebar-brand {
+  font-size: 1.25rem;
+  font-weight: bold;
+  margin-bottom: 1rem;
+}
+
+.sidebar-menu {
+  list-style: none;
+  padding: 0;
+}
+
+.sidebar-menu li {
+  margin: 0.5rem 0;
+}
+
+.sidebar-menu a {
+  color: #333;
+  text-decoration: none;
+  display: block;
+  padding: 0.5rem;
+  border-radius: 4px;
+}
+
+.sidebar-menu a:hover {
+  background-color: #e9ecef;
+}
+@media (max-width: 768px) {
+  .sidebar {
+      width: 200px; /* Reduce el ancho del sidebar en pantallas más pequeñas */
   }
-  
-  .sidebar-brand {
-    font-size: 1.25rem;
-    font-weight: bold;
-    margin-bottom: 1rem;
+
+  .main-content {
+      margin-left: 0; /* Elimina el margen cuando el sidebar es oculto o colapsado */
   }
-  
-  .sidebar-menu {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .sidebar-menu li {
-    margin: 0.5rem 0;
-  }
-  
-  .sidebar-menu a {
-    color: #333;
-    text-decoration: none;
-    display: block;
-    padding: 0.5rem;
-    border-radius: 4px;
-  }
-  
-  .sidebar-menu a:hover {
-    background-color: #e9ecef;
-  }
+}
