--- a/src/pages/Settings/Settings.css
+++ b/src/pages/Settings/Settings.css
@@ -1,64 +1,43 @@
+/* Settings.css */
+
 .settings {
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh; /* Asegúrate de que el contenedor ocupe al menos la altura completa del viewport */
-  }
-  
-  .settings-content {
-    margin-top: 60px; /* Ajusta según la altura del navbar */
-    margin-bottom: 60px; /* Ajusta según la altura del footer */
-    padding: 2rem;
-    flex: 1; /* Permite que el contenido principal crezca y se ajuste */
-    background-color: #f9f9f9;
-    border-radius: 8px;
-  }
-  
-  .settings-content h1 {
-    font-size: 2rem;
-    margin-bottom: 1rem;
-  }
-  
-  .settings-section {
-    margin-bottom: 2rem;
-  }
-  
-  .settings-section h2 {
-    font-size: 1.5rem;
-    margin-bottom: 0.5rem;
-  }
-  
-  .settings-section label {
-    display: block;
-    margin-bottom: 0.25rem;
-  }
-  
-  .settings-section input {
-    width: 100%;
-    padding: 0.5rem;
-    margin-bottom: 0.5rem;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-  
-  .error-text {
-    color: red;
-    font-size: 0.875rem;
-    margin-top: 0.5rem;
-  }
-  
-  .submit-button {
-    padding: 0.75rem 1.5rem;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s;
-  }
-  
-  .submit-button:hover {
-    background-color: #0056b3;
-  }
-  
-  
+  flex: 1;
+}
+
+.settings-content {
+  margin-top: 60px;
+  margin-bottom: 60px;
+  padding: 2rem;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+}
+
+h1 {
+  font-size: 2rem;
+  margin-bottom: 1rem;
+}
+
+.settings-section h2 {
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+
+.error-text {
+  font-size: 0.875rem;
+}
+
+.settings-content .form-control {
+  max-width: 100%; /* Limit input field width within its container */
+}
+
+.submit-button {
+  padding: 0.75rem 1.5rem;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s;
+}
+
+.submit-button:hover {
+  background-color: #0056b3;
+}
