--- a/src/App.css
+++ b/src/App.css
@@ -1,67 +1,19 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto; /* Center the root element */
-  padding: 2rem;
-  text-align: center;
-  width: 100%; /* Ensure the root element takes full width */
-}
-
-html, body {
-  margin: 0;
-  padding: 0;
-  height: 100%;
-  width: 100%;
-  box-sizing: border-box; /* Apply box-sizing to html and body */
-}
-
-/* Home layout to fill the entire height of the viewport */
-.home {
+/* Estilo general */
+.app-layout {
   display: flex;
   flex-direction: column;
-  min-height: 100vh; /* Ensure the container takes at least the full height of the viewport */
+  min-height: 100vh;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.main-content {
+  display: flex;
+  flex: 1;
+  width: 100%;
 }
 
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+main {
+  flex: 1;
+  padding: 2rem;
+  background-color: #f4f4f4;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
-
 
